# systemd-doctor

./: .gitignore  README.md  config.toml  systemd-doctor.service
service_test_1/: Cargo.toml
service_test_1/src/: main.rs
service_test_2/: Cargo.toml
service_test_2/src/: main.rs
systemd-doctor/: Cargo.toml
systemd-doctor/src/: cmd_health_check.rs  config.rs  config_parsing.rs  health_check.rs  health_monitor.rs  journal_log.rs  log.rs  log4rs.yaml  main.rs  sys_health_check.rs
