[package]
name = "systemd-doctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
csv = "1.3.0"
log = "0.4.21"
log4rs = "1.3.0"
sysinfo = "0.30.12"
toml = "0.8.19"
